// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Footer should match snapshot 1`] = `
<div>
  <div
    class="page-container__footer"
  >
    <footer>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button page-container__footer-button__cancel mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
        data-testid="page-container-footer-cancel"
      >
        Cancel
      </button>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="page-container-footer-next"
      >
        Submit
      </button>
    </footer>
  </div>
</div>
`;

exports[`Page Footer should render a secondary footer inside page-container__footer when given children 1`] = `
<div>
  <div
    class="page-container__footer"
  >
    <footer>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button page-container__footer-button__cancel mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
        data-testid="page-container-footer-cancel"
      >
        [cancel]
      </button>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="page-container-footer-next"
      >
        [next]
      </button>
    </footer>
    <div
      class="page-container__footer-secondary"
    >
      <div>
        Works
      </div>
    </div>
  </div>
</div>
`;
